--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.3",
     "react": "18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-native": "0.73.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
